# taskgraph-metaprogramming

./: AUTHORS  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  binaries_common.mk  bootstrap  config.status  configure  configure.ac  libtool
examples/complex/raytracer/: Camera.h  Colour.h  Finish.cc  Finish.h  Intersection.cc  Intersection.h  Light.cc  Light.h  Makefile  Makefile.am  Makefile.in  Math3D.h  Object.h  Ray.h  Sphere.h  Vector3D.cc  Vector3D.h  VectorOp.h  World.cc  World.h  raytracer.cc
examples/complex/raytracer/.deps/: Finish.Po  Intersection.Po  Light.Po  Vector3D.Po  World.Po  raytracer.Po  raytracer_tg-Finish.Po  raytracer_tg-Intersection.Po  raytracer_tg-Light.Po  raytracer_tg-Vector3D.Po  raytracer_tg-World.Po  raytracer_tg-raytracer.Po
examples/toy/: Makefile  Makefile.am  Makefile.in  andor.cc  fusearray.cc  fusion.cc  fusiontest.cc  iterative.cc  multipletg.cc  skewing.cc  structs.cc
examples/toy/.deps/: andor.Po  fusearray.Po  fusion.Po  fusiontest.Po  iterative.Po  multipletg.Po  skewing.Po  structs.Po
include/: Makefile  Makefile.am  Makefile.in  ReturnTaskGraph.h  SpuMemFuncs.h  Suif2C.h  TaskCell.h  TaskCompilers.h  TaskConstructs.h  TaskDefines.h  TaskException.h  TaskFunction.h  TaskGraph  TaskGraph.h  TaskGraph_config.h  TaskGraph_config.h.in  TaskGraph_config.h.in~  TaskGraph~  TaskIR.h  TaskIRCustom.h  TaskIRRose.h  TaskIRSuif.h  TaskIterative.h  TaskStructure.h  TaskTimer.h  TaskType.h  TaskTypeSafe.h  TaskTypeSafeHelper.h  TaskTypes.h  TaskUserFunctions.h  TaskUtilities.h  TaskVariable.h  TaskVector.h  stamp-h1
src/: Makefile  Makefile.am  Makefile.in  SpuMemFuncs.cc  TaskCell.cc  TaskCompilers.cc  TaskException.cc  TaskFunction.cc  TaskGraph.cc  TaskIterative.cc  TaskIterative.cc~  TaskTimer.cc  TaskVariable.cc
src/.deps/: libtaskgraph_la-TaskCompilers.Plo  libtaskgraph_la-TaskException.Plo  libtaskgraph_la-TaskFunction.Plo  libtaskgraph_la-TaskGraph.Plo  libtaskgraph_la-TaskIterative.Plo  libtaskgraph_la-TaskTimer.Plo  libtaskgraph_la-TaskVariable.Plo
src/rose/: TaskIRRose.cc
src/suif1/: SUIF_Porky_Scalarize.cc  TaskContraction.cc  TaskFusion.cc  TaskIRSuif.cc  TaskLoop.cc  TaskMallocLargeArrays.cc  TaskRaiseInitialAssignments.cc
src/suif1/.deps/: libtaskgraph_la-SUIF_Porky_Scalarize.Plo  libtaskgraph_la-TaskContraction.Plo  libtaskgraph_la-TaskFusion.Plo  libtaskgraph_la-TaskIRSuif.Plo  libtaskgraph_la-TaskLoop.Plo  libtaskgraph_la-TaskMallocLargeArrays.Plo  libtaskgraph_la-TaskRaiseInitialAssignments.Plo
suif/lib/: Makefile  Makefile.am  Makefile.in  suif_library_dependencies.dot  ver_create_ver_cc
suif/lib/builder/: bldtypes.cc  builder.cc  butil.cc  cgen.cc  lib_ver.cc  struct_access.cc  types.cc
suif/lib/builder/.deps/: libbuilder_la-bldtypes.Plo  libbuilder_la-builder.Plo  libbuilder_la-butil.Plo  libbuilder_la-cgen.Plo  libbuilder_la-lib_ver.Plo  libbuilder_la-struct_access.Plo
suif/lib/check/: check.cc  checktypes.cc  lib_ver.cc
suif/lib/check/.deps/: libcheck_la-check.Plo  libcheck_la-checktypes.Plo  libcheck_la-lib_ver.Plo
suif/lib/dependence/: access_vector.cc  bounds.cc  dep_node.cc  deptest_msc.cc  dodep.cc  dvector.cc  ehash.cc  exact.cc  fmred.cc  lib_ver.cc  lin_fm_hook.cc  linear_ineq.cc  mgcd.cc  named_array_func.cc  named_lin_ineq.cc  named_sc_dep.cc  named_sc_fm.cc  named_sc_init.cc  named_sc_merge.cc  named_sc_op.cc  named_sc_pr.cc  named_sc_runtime_merge.cc  normalize.cc  normalize_code.cc  print_code.cc
suif/lib/dependence/.deps/: libdependence_la-access_vector.Plo  libdependence_la-dep_node.Plo  libdependence_la-deptest_msc.Plo  libdependence_la-dodep.Plo  libdependence_la-dvector.Plo  libdependence_la-ehash.Plo  libdependence_la-exact.Plo  libdependence_la-lib_ver.Plo  libdependence_la-lin_fm_hook.Plo  libdependence_la-mgcd.Plo  libdependence_la-named_array_func.Plo  libdependence_la-named_sc_dep.Plo  libdependence_la-normalize.Plo  libdependence_la-normalize_code.Plo
suif/lib/s2c/: array_copy.cc  ctree.cc  ctree.h  group.cc  init.cc  io_class.cc  io_class.h  ldc.cc  lib_ver.cc  main.cc  namespace.cc  pass1.cc  places.h  preprocess.cc  re_eval.cc  s2c.h  style_defaults.h  util.cc
suif/lib/s2c/.deps/: libs2c_la-array_copy.Plo  libs2c_la-ctree.Plo  libs2c_la-group.Plo  libs2c_la-init.Plo  libs2c_la-io_class.Plo  libs2c_la-ldc.Plo  libs2c_la-lib_ver.Plo  libs2c_la-main.Plo  libs2c_la-namespace.Plo  libs2c_la-pass1.Plo  libs2c_la-preprocess.Plo  libs2c_la-re_eval.Plo  libs2c_la-util.Plo
suif/lib/suif1/: alist.cc  aman.cc  annote.cc  bitset.cc  callbyref.cc  cmdparse.cc  dlist.cc  fileset.cc  glist.cc  hash.cc  immed.cc  initsuif.cc  instruction.cc  lib_ver.cc  misc.cc  mtflist.cc  opcodes.cc  operand.cc  stringtable.cc  suifobj.cc  suifstreams.cc  symaddr.cc  symbols.cc  symtab.cc  tree_string_index.cc  trees.cc  ts_ptr_index.cc  types.cc  vardef.cc  xarray.cc
suif/lib/suif1/.deps/: libsuif1_la-alist.Plo  libsuif1_la-aman.Plo  libsuif1_la-annote.Plo  libsuif1_la-bitset.Plo  libsuif1_la-callbyref.Plo  libsuif1_la-cmdparse.Plo  libsuif1_la-dlist.Plo  libsuif1_la-fileset.Plo  libsuif1_la-glist.Plo  libsuif1_la-hash.Plo  libsuif1_la-immed.Plo  libsuif1_la-initsuif.Plo  libsuif1_la-instruction.Plo  libsuif1_la-lib_ver.Plo  libsuif1_la-misc.Plo  libsuif1_la-mtflist.Plo  libsuif1_la-opcodes.Plo  libsuif1_la-operand.Plo  libsuif1_la-stringtable.Plo  (+11 more)
suif/lib/suifmath/: bounds.cc  code_context.cc  coeff.cc  debughelp.cc  ffm.cc  fmred.cc  fract.cc  fract_matrix.cc  fract_vector.cc  int_matrix.cc  lib_ver.cc  linear_ineq.cc  matrix.cc  named_lin_ineq.cc  named_sc_fm.cc  named_sc_init.cc  named_sc_merge.cc  named_sc_merge.cc~  named_sc_op.cc  named_sc_pr.cc  print_code.cc  vector_space.cc
suif/lib/transform/: bexpr.cc  lib_ver.cc  lptrans.cc
suif/lib/useful/: arrayinfo.cc  dismantle.cc  estimate.cc  eval.cc  expr_map.cc  init.cc  inline.cc  inumbers.cc  labinfo.cc  lib_ver.cc  linkinfo.cc  make_instr_ops.cc  marker.cc  namespace.cc  no_sub_vars.cc  outline.cc  positioning.cc  spill_instr_ops.cc  symbol.cc  test_modification.cc  transform.cc  useful.cc  walk.cc
(+261 files in other folders)
