include $(top_srcdir)/binaries_common.mk

bin_PROGRAMS = structs andor fusearray fusion fusiontest iterative multipletg skewing
structs_SOURCES = structs.cc
andor_SOURCES = andor.cc
fusearray_SOURCES = fusearray.cc
fusion_SOURCES = fusion.cc
fusiontest_SOURCES = fusiontest.cc
iterative_SOURCES = iterative.cc
multipletg_SOURCES = multipletg.cc
skewing_SOURCES = skewing.cc
